# beepoda

./: Cargo.toml  flake.nix
.cargo/: config.toml
scripts/: gpio.rhai
src/: main.rs  pins.rs
